Update: Rasa model is trained for the first time

--- a/data/rules.yml
+++ b/data/rules.yml
@@ -2,12 +2,22 @@ version: "3.1"
 
 rules:
 
-- rule: Say goodbye anytime the user says goodbye
-  steps:
-  - intent: goodbye
-  - action: utter_goodbye
+  - rule: Saludar
+    steps:
+      - intent: saludar
+      - action: utter_saludar
 
-- rule: Say 'I am a bot' anytime the user challenges
-  steps:
-  - intent: bot_challenge
-  - action: utter_iamabot
+  - rule: Despedirse
+    steps:
+      - intent: despedirse
+      - action: utter_despedirse
+
+  - rule: Decir 'Soy un bot' cuando el usuario desafía al bot
+    steps:
+      - intent: bot_challenge_es
+      - action: utter_soy_un_bot
+
+  - rule: Decir adiós
+    steps:
+      - intent: despedirse
+      - action: utter_despedirse
