--- a/domain.yml
+++ b/domain.yml
@@ -1,33 +1,17 @@
 version: "3.1"
 
 intents:
-  - greet
-  - goodbye
-  - affirm
-  - deny
-  - mood_great
-  - mood_unhappy
-  - bot_challenge
+  - saludar
+  - despedirse
+  - bot_challenge_es
 
 responses:
-  utter_greet:
-  - text: "Hey! How are you?"
-
-  utter_cheer_up:
-  - text: "Here is something to cheer you up:"
-    image: "https://i.imgur.com/nGF1K8f.jpg"
-
-  utter_did_that_help:
-  - text: "Did that help you?"
-
-  utter_happy:
-  - text: "Great, carry on!"
-
-  utter_goodbye:
-  - text: "Bye"
-
-  utter_iamabot:
-  - text: "I am a bot, powered by Rasa."
+  utter_saludar:
+    - text: "¡Hola! ¿En qué puedo ayudarte?"
+  utter_despedirse:
+    - text: "¡Hasta luego! Que tengas un buen día."
+  utter_soy_un_bot:
+    - text: "¡Sí! Soy un bot. ¿En qué puedo ayudarte?"
 
 session_config:
   session_expiration_time: 60
