--- a/data/stories.yml
+++ b/data/stories.yml
@@ -2,29 +2,20 @@ version: "3.1"
 
 stories:
 
-- story: happy path
+- story: Saludar y despedirse
   steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: mood_great
-  - action: utter_happy
+  - intent: saludar
+  - action: utter_saludar
+  - intent: despedirse
+  - action: utter_despedirse
 
-- story: sad path 1
+- story: Decir 'Soy un bot' cuando el usuario desafía al bot
   steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
-  - intent: affirm
-  - action: utter_happy
+  - intent: bot_challenge_es
+  - action: utter_soy_un_bot
 
-- story: sad path 2
+- story: Decir adiós
   steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
-  - intent: deny
-  - action: utter_goodbye
+  - intent: despedirse
+  - action: utter_despedirse
+
